2007-07-16  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add manpage sources.

	* man: New directory, containing...
	* man/catopen.man, man/catgets.man, man/catclose.man: New files.
	* man/gencat.man: New file.

	* Makefile.in (VPATH): Add `man' source directory.
	(MANPAGE_SOURCES): Define; it includes all new `*.man' files, as
	itemised above, for this update.
	(MANSECTS, MAN1EXT, MAN2EXT, MAN3EXT): Define.
	(mansect_lookup, mansect_transform, mansect, manpage): New macros;
	use them to define a generic rule for generating installable manpages,
	from raw manpage source, used by...
	(all-man): this new documentation target.
	(all-info, all-html-doc, all-pdf, all-ps): New documentation targets;
	none invoke any action, at present.
	(all-doc): New collective documentation target; it invokes `all-man',
	`all-info', `all-htmldoc', `all-pdf' and `all-ps'.
	(all): Add `all-doc' as new prerequisite.
	(install-man): Add prerequisites and commands for `MANPAGE_SOURCES'.
	(DISTDIRS): Add `man'.
	(clean): Add `*.n', `*.a' and `*.dll' as generic prototypes for `rm'.

2007-07-16  Keith Marshall  <keithmarshall@users.sourceforge.net>

	* catclose.c (mc_close): Error out, if descriptor for message
	catalogue to be closed lies outside the valid range.

2007-06-18  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Handle unicode input streams.

	* mcutfsig.c, include/mcutfsig.h: New files; they define the
	interface and implementation for...
	(mc_utf_signature): ...this new function.

	* mcsource.c (mc_discard): New static function.
	(mc_source): Use it to clean up heap on abnormal termination.
	Include `mcutfsig.h'; use `mc_utf_signature' to identify unicode
	streams; map codeset using new local variables `input_encoding'
	and `input_code_size'; use them with...
	(UTF_TYPE): ...this new macro, to parse input accordingly.

	* include/gcmsgs.h (MSG_HAD_CODESET): New wording.
	(MSG_UTF_CODESET, NMSG_UTF_UNKNOWN): New message definitions.